# strop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  NOTICE  README.md  about.hbs  about.toml  ai-writers-editor-handoff.md  clippy.toml  deny.toml  minisign.pub  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: third-party-licenses.txt
assets/desktop/: strop-mime.xml  strop.desktop.in
assets/hyphenation/: ATTRIBUTION.txt
assets/icons/LICENSES/: LICENSE-lucide.txt
crates/strop-app/: Cargo.toml  build.rs
crates/strop-app/examples/: bookface_audit.rs  shape_audit.rs
crates/strop-app/proptest-regressions/: editor.txt
crates/strop-app/src/: about.rs  ai_log.rs  aux_window.rs  bookpage.rs  commands.rs  config.rs  draw_guard.rs  editor.rs  files.rs  hyphen.rs  icons.rs  keymap_window.rs  main.rs  paths.rs  single_instance.rs  smoke.rs  startup_error.rs  strip.rs  text_field.rs  theme.rs  tutorial.rs  xdg_recents.rs
crates/strop-app/src/update/: fetch.rs  manifest.rs  mod.rs  recovery.rs  sha256.rs  storage.rs
crates/strop-core/: Cargo.toml
crates/strop-core/examples/: dump.rs
crates/strop-core/src/: buffer.rs  diagnose.rs  diff.rs  document.rs  images.rs  journal.rs  language.rs  lib.rs  llm.rs  markdown.rs  store.rs  typograph.rs  voice.rs
crates/strop-core/tests/: bench_composition.rs  bench_history.rs  corpus.rs  model.proptest-regressions  model.rs  robustness.proptest-regressions  robustness.rs
crates/strop-core/tests/corpus/: v0.2.0.expected.json  v0.2.0.post-edit.expected.json  v0.2.0.strop
crates/strop-core/tests/support/: mod.rs
docs/: BUG-HUNT-2026-06-15.md  DECISIONS.md  DESIGN.md  FOLLOWUP-2026-06-16.md  PERF.md  PLAN.md  ROADMAP.md  UPSTREAM-gpui-scale-bug.md  UPSTREAM-gpui-windows-keyboard-layout.md  VISUAL-RIG.md  asides.md  attention-motion.md  cold-history.md  color-language.md  dependency-review-2026-06.md  design-principles.md  document-model.md  editorial-foundations.md  golden-path.md  gpui-fork.md  hardening-backlog.md  history-strip.md  iconography.md  inline-images.md  keymap-baseline.md  margin-card-dynamics.md  papercuts-2026-07.md  perf-save-stall-2026-06.md  releasing.md  system-voice-backlog.md  tester-feedback-attention.md  ux-glossary.md  writing-editing-checkpointing.md
docs/impl/: 00-journal.md  01-history-strip.md  02-asides.md  03-flanks.md  04-editor-button.md  05-cold-read.md  06-omnibar.md  07-compost.md  08-compost-fresh.md  09-inline-images.md  10-llm-pipeline.md  11-llm-repair-flow.md  12-history-v3.md  13-history-round2.md  14-door-chip.md  15-scrollbar.md  16-book-typography.md  18-keyboard-map.md  acceptance.md  macos-signing.md  plan.md  review-ledger.md
docs/impl/cold-read/: adjudications.md  corners-notes.md  corners-regions.md  corners-scopes.md  corners-surfaces.md  corners-time.md  design-law.md  recon-code.md  research-linebreak.md  research-page.md
docs/impl/compost-fresh/: adjudications.md  brief.md  corners-graveyard-interplay.md  corners-scopes-search.md  corners-seam-mechanics.md  corners-surfaces-attention.md  corners-time-persistence.md  critique-drawer-interface.md  critique-drawer-practice.md  critique-fold-interface.md  critique-fold-practice.md  critique-margin-interface.md  critique-margin-practice.md  critique-spartan-interface.md  critique-spartan-practice.md  critique-tail-interface.md  critique-tail-practice.md  critique-verso-interface.md  critique-verso-practice.md  design-drawer.md  design-fold.md  design-margin.md  design-spartan.md  design-tail.md  design-verso.md  extraction-summary.md  judge-flow.md  judge-grammar.md  judge-rent.md  research-practice.md  research-theory.md  research-tools.md
docs/mockups/: scraps-tail-2026-07.html  ux-lab-2026-07.html
docs/research/: history-strip-panel-2026-07.md  language-detection-2026-07.md  llm-pipeline-branch-audit-2026-07.md  llm-pipeline-review-2026-07.md  right-margin-notification-ux-audit-2026-07.md  round4-critiques-2026-07.md  window-decorations-csd.md  writer-core-loop-2026-06-14.md  writing-lifecycle-2026-07.md
packaging/linux/: cc.pimenov.strop.desktop  cc.pimenov.strop.metainfo.xml  cc.pimenov.strop.mime.xml  rpm-post.sh
packaging/windows/: strop.iss  strop.rc
patches/: README.md  gpui_wgpu-scale-context.patch  gpui_windows-keyboard-layout.patch
script/: bundle-mac.sh  notary-status.sh  release-sign.sh  stage-runtime-assets.sh
scripts/: gen-large-fixture.py  install-desktop.sh  rig-check.sh  shot.sh  wflip.sh  wmigrate.sh  wrun.sh  wshot.sh
scripts/fixtures/: flip-footnote.md  flip-list.md  flip-plain.md  hero-shadow.md
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
