[workspace]
resolver = "2"
members = ["crates/strop-core", "crates/strop-app"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
strop-core = { path = "crates/strop-core" }
ropey = "1.6"
loro = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.13", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff", "rayon"] }
blake3 = "1.8"
toml = "1"
toml_edit = "0.25"
ureq = { version = "3", features = ["json"] }
similar = { version = "3", features = ["unicode"] }
glob = "0.3"

# Pinned to a FORK of zed-industries/zed — github.com/kirushik/zed, branch
# `strop-patches-on-main`, tip `c0a1cafa`: the two gpui-tree fixes below rebased
# onto upstream main (origin/main @ 69b602c7, 2026-06-18) plus an `image` trim.
# 2026-06-19 dependency review (docs/dependency-review-2026-06.md): -43 crates vs
# the old f3f236eb pin (826 -> 783) — async-std/async-tar gone (cleared
# RUSTSEC-2025-0052). The image trim additionally stops compiling avif(rav1e)/exr
# (smaller binary, faster cold build). Cargo.lock still lists ravif/exr under
# `image` — that's Cargo version-pinning image's OPTIONAL deps under a git source,
# NOT the avif/exr features being on. Enabled features are png/jpeg/webp/gif/bmp/
# tiff/ico/pnm only (`cargo tree -e features | grep 'image feature'`), so they're
# never built.
#
# The fork is the single source of truth for our gpui-tree changes — the three
# commits ARE the diffs, no vendored copy. docs/gpui-fork.md has the links and
# the re-sync recipe.
#   - gpui_windows: layout-independent letter keys, so Ctrl+Shift+P (and every
#     letter chord) fires under non-Latin keyboard layouts (Cyrillic, …).
#   - gpui_wgpu: a fresh swash ScaleContext per glyph — the Wayland scale-change
#     glyph corruption (docs/UPSTREAM-gpui-scale-bug.md).
#   - gpui: narrow `image` to png/jpeg/webp/gif/bmp/tiff/ico/pnm in the
#     gpui-family crates (default features drag in the rav1e AV1 encoder, exr, qoi).
# The two bug-fix commits head upstream as separate PRs; point back at
# zed-industries/zed once they land. Apps need both the `gpui` facade and
# `gpui_platform` (selects gpui_linux/gpui_wgpu on Linux):
# `gpui_platform::application()`. X11 kept on for distribution packaging.
gpui = { git = "https://github.com/kirushik/zed", rev = "c0a1cafaef4e8d8060fa62e0a66c530433b353ba", default-features = false, features = ["font-kit", "wayland", "x11"] }
gpui_platform = { git = "https://github.com/kirushik/zed", rev = "c0a1cafaef4e8d8060fa62e0a66c530433b353ba", default-features = false, features = ["wayland", "x11"] }

[profile.dev]
# gpui is a huge dep tree; keep its codegen optimized even in dev builds
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# Distribution builds — CI: `cargo build --profile dist`. Built ONCE in CI, then
# downloaded and run many times, so we trade compile time for a smaller, faster
# binary. Kept separate from `release` so a local `cargo build --release` stays
# quick. Mirrors Zed's own gpui release profile (thin LTO + codegen-units=1) — see
# docs/dependency-review-2026-06.md ("Release binary optimization").
[profile.dist]
inherits = "release"
opt-level = 3          # latency-sensitive GPU/text hot paths: keep max speed (not "s"/"z")
lto = "thin"           # ~all of fat-LTO's win with a parallel link; Zed's choice
codegen-units = 1      # whole-graph optimization across the dep tree
strip = "symbols"      # drops debuginfo (no crash reporter to feed). NOTE: on this
                       # toolchain this LEAVES the static symbol table (.symtab/
                       # .strtab, ~5 MB); release.yml additionally runs
                       # `strip --strip-all` on the artifact to remove it.
# (trim-paths isn't a stable profile key on the pinned toolchain; if a public
#  build should hide CI/home paths, set RUSTFLAGS="--remap-path-prefix=..." in CI.)

[profile.dist.package.strop-app]
# Keep the one big app crate parallel so codegen-units=1 doesn't serialize its
# compile — thin LTO re-merges across units anyway (Zed does this for `zed`).
codegen-units = 16
