[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

# The icon pipeline (docs/releasing.md §9): one master SVG in, every
# platform format out. resvg is pinned to the version already in the tree
# (gpui ships it), so this costs no new heavy dependency.
[dependencies]
resvg = { version = "0.46", default-features = false }
png = "0.18"
ico = "0.4"
icns = "0.4"
