[package]
name = "strop-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Strop desktop shell (GPUI)"

[[bin]]
name = "strop"
path = "src/main.rs"

[dependencies]
strop-core = { workspace = true }
ropey = { workspace = true }
gpui = { workspace = true }
gpui_platform = { workspace = true }
directories = "6"
# Cold read (impl 05 §2.4): TeX-pattern hyphenation, runtime-loaded
# dictionaries only — NO embed features, ever: hyph-ru is LPPL 1.2+
# (GPL-incompatible; the mere-aggregation posture wants the data as loose
# files in assets/hyphenation/, read via Standard::from_path). The crate
# code itself is Apache-2.0/MIT (verified, research-linebreak §1.4).
hyphenation = "0.8.4"
# F2: hyphenation looks up an NFC COPY of each word and skips the word
# when its NFC form differs from the raw form — the slice string itself
# is never transformed.
unicode-normalization = "0.1"
unicode-segmentation = "1"
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
glob = { workspace = true }
interprocess = "2.4.2"

# XDG document-portal resolution (files.rs) exists only where the portal
# does. ashpd's zbus stack does not even compile on Windows (std::os::fd),
# and macOS was paying to build a D-Bus client it could never speak to —
# so the dependency is target-gated, not merely unused (Copilot, PR #28).
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd = { version = "0.13.11", default-features = false,
    features = ["async-io", "documents"] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
ttf-parser = "0.25"
proptest = "1"
