[package]
name = "strop-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Strop desktop shell (GPUI)"

[[bin]]
name = "strop"
path = "src/main.rs"

[dependencies]
strop-core = { workspace = true }
ropey = { workspace = true }
gpui = { workspace = true }
gpui_platform = { workspace = true }
directories = "6"
# Cold read (impl 05 §2.4): TeX-pattern hyphenation, runtime-loaded
# dictionaries only — NO embed features, ever: hyph-ru is LPPL 1.2+
# (GPL-incompatible; the mere-aggregation posture wants the data as loose
# files in assets/hyphenation/, read via Standard::from_path). The crate
# code itself is Apache-2.0/MIT (verified, research-linebreak §1.4).
hyphenation = "0.8.4"
# F2: hyphenation looks up an NFC COPY of each word and skips the word
# when its NFC form differs from the raw form — the slice string itself
# is never transformed.
unicode-normalization = "0.1"
unicode-segmentation = "1"
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
glob = { workspace = true }
interprocess = "2.4.2"

# Self-update (docs/releasing.md §4): minisign-verify checks the signed
# manifest against the baked key list; semver enforces the downgrade gate;
# fs4 is the installation-wide advisory update lock (the per-document
# rendezvous socket deliberately provides no swap exclusion).
minisign-verify = "0.2"
semver = { workspace = true }
fs4 = "0.13"
ureq = { workspace = true }

# XDG document-portal resolution (files.rs) exists only where the portal
# does. ashpd's zbus stack does not even compile on Windows (std::os::fd),
# and macOS was paying to build a D-Bus client it could never speak to —
# so the dependency is target-gated, not merely unused (Copilot, PR #28).
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd = { version = "0.13.11", default-features = false,
    features = ["async-io", "documents"] }

# The Windows swap dance: a running exe can be renamed but not unlinked;
# self-replace owns that ritual (docs/releasing.md §4 "Apply").
[target.'cfg(windows)'.dependencies]
self-replace = "1"
windows-sys = { workspace = true }

[dev-dependencies]
# Test-only minisign *signing* — production only ever verifies.
minisign = "0.7"
gpui = { workspace = true, features = ["test-support"] }
ttf-parser = "0.25"
proptest = "1"

[build-dependencies]
embed-resource = "3"

[package.metadata.deb]
maintainer = "Kirill Pimenov <kirushik@gmail.com>"
depends = "$auto"
assets = [
    ["target/release/strop", "usr/bin/", "755"],
    ["../../COPYING", "usr/share/doc/strop/COPYING", "644"],
    ["../../NOTICE", "usr/share/doc/strop/NOTICE", "644"],
    ["../../packaging/linux/cc.pimenov.strop.desktop", "usr/share/applications/", "644"],
    ["../../packaging/linux/cc.pimenov.strop.mime.xml", "usr/share/mime/packages/", "644"],
    ["../../packaging/linux/cc.pimenov.strop.metainfo.xml", "usr/share/metainfo/", "644"],
    ["../../packaging/generated/hicolor/**/*", "usr/share/icons/hicolor/", "644"],
    ["../../assets/fonts/coldread/URWBookman-Light.otf", "usr/share/strop/assets/fonts/coldread/URWBookman-Light.otf", "644"],
    ["../../assets/fonts/coldread/URWBookman-LightItalic.otf", "usr/share/strop/assets/fonts/coldread/URWBookman-LightItalic.otf", "644"],
    ["../../assets/fonts/coldread/URWBookman-Demi.otf", "usr/share/strop/assets/fonts/coldread/URWBookman-Demi.otf", "644"],
    ["../../assets/fonts/coldread/LICENSE", "usr/share/strop/assets/fonts/coldread/LICENSE", "644"],
    ["../../assets/hyphenation/en-us.standard.bincode", "usr/share/strop/assets/hyphenation/en-us.standard.bincode", "644"],
    ["../../assets/hyphenation/ru.standard.bincode", "usr/share/strop/assets/hyphenation/ru.standard.bincode", "644"],
    ["../../assets/hyphenation/ATTRIBUTION.txt", "usr/share/strop/assets/hyphenation/ATTRIBUTION.txt", "644"],
    ["../../assets/paper-noise-256.png", "usr/share/strop/assets/paper-noise-256.png", "644"],
]

[package.metadata.generate-rpm]
post_install_script = "../../packaging/linux/rpm-post.sh"
post_uninstall_script = "../../packaging/linux/rpm-post.sh"
assets = [
    { source = "target/release/strop", dest = "/usr/bin/strop", mode = "755" },
    { source = "../../COPYING", dest = "/usr/share/doc/strop/COPYING", mode = "644" },
    { source = "../../NOTICE", dest = "/usr/share/doc/strop/NOTICE", mode = "644" },
    { source = "../../packaging/linux/cc.pimenov.strop.desktop", dest = "/usr/share/applications/cc.pimenov.strop.desktop", mode = "644" },
    { source = "../../packaging/linux/cc.pimenov.strop.mime.xml", dest = "/usr/share/mime/packages/cc.pimenov.strop.xml", mode = "644" },
    { source = "../../packaging/linux/cc.pimenov.strop.metainfo.xml", dest = "/usr/share/metainfo/cc.pimenov.strop.metainfo.xml", mode = "644" },
    { source = "../../packaging/generated/hicolor/**/*", dest = "/usr/share/icons/hicolor/", mode = "644" },
    { source = "../../assets/fonts/coldread/URWBookman-Light.otf", dest = "/usr/share/strop/assets/fonts/coldread/URWBookman-Light.otf", mode = "644" },
    { source = "../../assets/fonts/coldread/URWBookman-LightItalic.otf", dest = "/usr/share/strop/assets/fonts/coldread/URWBookman-LightItalic.otf", mode = "644" },
    { source = "../../assets/fonts/coldread/URWBookman-Demi.otf", dest = "/usr/share/strop/assets/fonts/coldread/URWBookman-Demi.otf", mode = "644" },
    { source = "../../assets/fonts/coldread/LICENSE", dest = "/usr/share/strop/assets/fonts/coldread/LICENSE", mode = "644" },
    { source = "../../assets/hyphenation/en-us.standard.bincode", dest = "/usr/share/strop/assets/hyphenation/en-us.standard.bincode", mode = "644" },
    { source = "../../assets/hyphenation/ru.standard.bincode", dest = "/usr/share/strop/assets/hyphenation/ru.standard.bincode", mode = "644" },
    { source = "../../assets/hyphenation/ATTRIBUTION.txt", dest = "/usr/share/strop/assets/hyphenation/ATTRIBUTION.txt", mode = "644" },
    { source = "../../assets/paper-noise-256.png", dest = "/usr/share/strop/assets/paper-noise-256.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
shared-mime-info = "*"
