[package]
name = "strop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Framework-agnostic document engine for Strop: buffer, history, typograph, diagnostics"

[dependencies]
ropey = { workspace = true }
loro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = { workspace = true }
